# RsMetaCheck

./: .gitignore  .readthedocs.yaml  README.md  action.yml  codemeta.json  mkdocs.yml  pyproject.toml  setup.py  update_version.py
.github/workflows/: ci.yml  pypi-publish.yml  test-action.yml
BACKUP/ground_truth/: comparison.html  summary_pitfalls_warnings.json
data/examples/: notes_example.json  output_verbose.json
data/pitfalls_outputs/: output_1000_pitfalls.jsonld  output_1004_pitfalls.jsonld  output_1006_pitfalls.jsonld  output_1007_pitfalls.jsonld  output_100_pitfalls.jsonld  output_1010_pitfalls.jsonld  output_1016_pitfalls.jsonld  output_1018_pitfalls.jsonld  output_1019_pitfalls.jsonld  output_101_pitfalls.jsonld  output_1020_pitfalls.jsonld  output_1021_pitfalls.jsonld  output_1028_pitfalls.jsonld  output_102_pitfalls.jsonld  output_1031_pitfalls.jsonld  output_1034_pitfalls.jsonld  output_1035_pitfalls.jsonld  output_1037_pitfalls.jsonld  output_1042_pitfalls.jsonld  output_1049_pitfalls.jsonld  output_1050_pitfalls.jsonld  output_1052_pitfalls.jsonld  output_1053_pitfalls.jsonld  output_1054_pitfalls.jsonld  output_1055_pitfalls.jsonld  output_1060_pitfalls.jsonld  (+445 more)
docs/: catalog.md  index.html  index.md  installation.md  output.md  usage.md
tests/: test_cli.py  test_config.py  test_e2e.py  test_json_ld_utils.py  test_p001.py  test_p002.py  test_p003.py  test_p006.py  test_p008.py  test_p009.py  test_p011.py  test_p013.py  test_p015.py  test_p016.py  test_w001.py  test_w003.py  test_w004.py  test_w005.py  test_w008.py  test_w010.py
(+1763 files in other folders)
