[tool.poetry]
name = "rsmetacheck"
version = "0.3.2"
description = "Detect metadata pitfalls in software repositories"
authors = ["Anas El Hounsri"]
readme = "README.md"
packages = [{include = "rsmetacheck", from = "src"}]

[tool.poetry.dependencies]
    python = ">=3.11,<3.13"
    requests = "*"
    somef = "0.10.3"
    textual = ">=0.52.0"
    pyfiglet = ">=1.0.0"

[tool.poetry.scripts]
rsmetacheck = "rsmetacheck.cli:cli"
rsmetacheck-tui = "rsmetacheck.tui.cli:launch_tui"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
